// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<View
  accessibilityRole="banner"
  style={
    Object {
      "backgroundColor": "#F9F8F3",
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 15,
    }
  }
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#1D1D1B",
          "fontSize": 30,
          "fontWeight": "400",
          "lineHeight": 30,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#069",
          "fontSize": 15,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 15,
          "lineHeight": 25,
          "marginTop": 6,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "bottom": -50,
        "left": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Image
        onError={[Function]}
        source={
          Object {
            "uri": "",
          }
        }
        style={
          Object {
            "backgroundColor": "#EFEFEF",
            "borderColor": "#FFF",
            "borderRadius": 50,
            "borderWidth": 5,
            "height": 0,
            "left": "-66%",
            "position": "relative",
            "width": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders a snapshot with data 1`] = `
<View
  accessibilityRole="banner"
  style={
    Object {
      "backgroundColor": "#F9F8F3",
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 15,
    }
  }
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#1D1D1B",
          "fontSize": 30,
          "fontWeight": "400",
          "lineHeight": 30,
          "textAlign": "center",
        }
      }
    >
      Carol Midgley
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      columnist
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#069",
          "fontSize": 15,
          "textAlign": "center",
        }
      }
    >
      @carolmidgley
    </Text>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 15,
          "lineHeight": 25,
          "marginTop": 6,
          "textAlign": "center",
        }
      }
    >
      Carol Midgley joined The Times in 1996, and won feature writer of the year in 2004. Find her Wednesday column in Times2 each week and a weekly comment piece on Fridays.
    </Text>
  </View>
  <View
    style={
      Object {
        "bottom": -50,
        "left": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Image
        onError={[Function]}
        source={
          Object {
            "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200",
          }
        }
        style={
          Object {
            "backgroundColor": "#EFEFEF",
            "borderColor": "#FFF",
            "borderRadius": 50,
            "borderWidth": 5,
            "height": 0,
            "left": "-66%",
            "position": "relative",
            "width": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;
